--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sitback/presto-project",
-    "description": "Project template for Drupal 8 projects with presto",
+    "description": "Presto!-based project template for Drupal 8 projects.",
     "type": "project",
     "license": "GPL-2.0+",
     "repositories": [
