--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsstream": "~1.2",
+        "phpro/grumphp": "^0.11.5",
         "phpunit/phpunit": ">=4.8.28 <5",
+        "sensiolabs/security-checker": "^4.0",
         "symfony/css-selector": "~2.8"
     },
     "conflict": {
